--- a/index.html
+++ b/index.html
@@ -14,29 +14,17 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer">
+    <div id="header_wrap" class="outer" style="padding-top: 10px; padding-bottom: 10px;">
+        <div style="background-image: url('images/logo.png'); background-repeat: no-repeat; float: right; width: 216px; height: 212px; margin-right: 20%;"></div>
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/pcperini/supercluster">View on GitHub</a>
-
           <h1 id="project_title">supercluster</h1>
           <h2 id="project_tagline">bring social down to earth</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/pcperini/supercluster/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/pcperini/supercluster/tarball/master">Download this project as a tar.gz file</a>
-            </section>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a id="supercluster" class="anchor" href="#supercluster" aria-hidden="true"><span class="octicon octicon-link"></span></a>supercluster</h1>
-
-<h2>
-<a id="bring-social-down-to-earth" class="anchor" href="#bring-social-down-to-earth" aria-hidden="true"><span class="octicon octicon-link"></span></a>bring social down to earth</h2>
-
 <p>there’s a whole world of social interaction waiting to be explored. supercluster is a location-based live feed of the entire social galaxy: twitter, instagram, foursquare, and more.</p>
 
 <ul>
@@ -53,19 +41,13 @@
 <li>zoom in until the loupe aligns, or further for a more focused search</li>
 <li>tap the shuttle to take off!</li>
 </ul>
-
-<h3>
-<a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>about...</h3>
-
-<p>supercluster was created by <a href="https://github.com/hestinr12" class="user-mention">@hestinr12</a> and <a href="https://github.com/pcperini" class="user-mention">@pcperini</a> for the Launch Hackathon 2015, because they <a href="http://megabitsapp.com">love the real world</a>.</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">supercluster maintained by <a href="https://github.com/pcperini">pcperini</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">supercluster was created by <a href="https://github.com/hestinr12" class="user-mention">@hestinr12</a> and <a href="https://github.com/pcperini" class="user-mention">@pcperini</a> for the Launch Hackathon 2015, because they <a href="http://megabitsapp.com">love the real world</a>.</p>
       </footer>
     </div>
 
