--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
       <section id="main_content" class="inner">
 <p>there’s a whole world of social interaction waiting to be explored. supercluster is a location-based live feed of the entire social galaxy: twitter, instagram, foursquare, and more.</p>
 
-<ul>
-<li>follow pics and posts of live events</li>
-<li>discover new places through the eyes of those whole live there</li>
-<li>see who else is exploring the world in real time</li>
-</ul>
+<center>
+<h3>follow pics and posts of live events</h3>
+<img src="images/LIVE_EVENT.gif" width="240"/>
+<!--<li>discover new places through the eyes of those whole live there</li>
+<li>see who else is exploring the world in real time</li>-->
+</center>
 
 <h3>
 <a id="to-use" class="anchor" href="#to-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>to use...</h3>
