--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>supercluster</title>
   </head>
 
-  <body>
+  <body style="font-family: 'Avenir' !important;">
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer" style="padding-top: 10px; padding-bottom: 10px;">
@@ -25,22 +25,25 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-<p>there’s a whole world of social interaction waiting to be explored. supercluster is a location-based live feed of the entire social galaxy: twitter, instagram, foursquare, and more.</p>
+<p>there’s a whole world of social interaction waiting to be explored. supercluster is a location-based live feed of the social galaxy.</p>
+<center><img src="images/twitter.png" width="60"/><img src="images/instagram.png" width="60"/><img src="images/foursquare.png" width="60"/></center>
 
+<br/>
 <center>
-<h3>follow pics and posts of live events</h3>
-<img src="images/LIVE_EVENT.gif" width="240"/>
-<!--<li>discover new places through the eyes of those whole live there</li>
-<li>see who else is exploring the world in real time</li>-->
+<h3>discover new places through the eyes of those whole live there</h3>
+<img src="images/PEOPLE_PLACES.gif" width="240"/>
+
+<h3>see who else is exploring the world in real time</h3>
+<img src="images/HEATMAP.gif" width="240"/>
 </center>
 
 <h3>
 <a id="to-use" class="anchor" href="#to-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>to use...</h3>
 
 <ul>
-<li>find a place you want to explore</li>
-<li>zoom in until the loupe aligns, or further for a more focused search</li>
-<li>tap the shuttle to take off!</li>
+<li>🌎 find a place you want to explore</li>
+<li>🔎 zoom in until the loupe aligns, or further for a more focused search</li>
+<li>🚀 tap the shuttle to take off!</li>
 </ul>
       </section>
     </div>
