--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <br/>
       <center>
       <h3>discover new places through the eyes of those who live there</h3>
-      <img src="images/PEOPLE_PLACES.gif" width="240"/>
+      <img src="images/LIVE_EVENT.gif" width="240"/>
       
       <h3>see who else is exploring the world in real time</h3>
       <img src="images/HEATMAP.gif" width="240"/>
